--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   shared_preferences: ^2.2.1
   flutter_bloc: ^8.1.3
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
