--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,10 @@ dependencies:
   shared_preferences: ^2.2.1
   flutter_bloc: ^8.1.3
   http: ^1.1.0
+  firebase_core: ^2.20.0
+  firebase_auth: ^4.12.0
+  google_sign_in: ^6.1.5
+  flutter_facebook_auth: ^6.0.2
 
 dev_dependencies:
   flutter_test:
