--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   firebase_auth: ^4.12.0
   google_sign_in: ^6.1.5
   flutter_facebook_auth: ^6.0.2
+  fluttertoast: ^8.2.2
 
 dev_dependencies:
   flutter_test:
